--- a/_code/preprocessing.ipynb
+++ b/_code/preprocessing.ipynb
@@ -3,124 +3,104 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "helpful-violation",
+   "id": "downtown-gather",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import glob, pickle\n",
-    "# import numpy as np\n",
-    "# import cv2 \n",
+    "import os, glob, random, shutil, json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "mental-tribune",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "17763\n",
+      "104\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls /home/jovyan/nas-dataset/JUPR/MAM20044/Bad/*.png | wc -l\n",
+    "! ls /home/jovyan/nas-dataset/JUPR/MAM20044/Good/*.png | wc -l\n",
+    "! ls /home/jovyan/nas-dataset/JUPR/888/*.jpg | wc -l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "instrumental-impact",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blackS = {\n",
+    "    \"R3_MAM20044_1FDG71002398010E0AL00NU1_1603232235654.png\",\\\n",
+    "    \"R3_MAM20044_1FDG71002398010E0AL00NUS_1603232235654.png\",\\\n",
+    "    \"R3_MAM20044_1FDG71002398010E0AL00PLE_1603231217066.png\",\\\n",
+    "} # not really good (prevent good from referencing)\n",
     "\n",
-    "# class Preprocess: # cat dog\n",
-    "#     def __init__(self, imgPath, antPath, outputPath):\n",
-    "#         self.imgPathL = sorted( glob.glob(f\"{imgPath}/*.jpg\") )\n",
-    "#         self.antPathL = sorted( glob.glob(f\"{antPath}/*.txt\") )        \n",
-    "#         self.outputPath = outputPath\n",
-    "        \n",
-    "#     def f(self):\n",
-    "#         os.makedirs(f\"{self.outputPath}/train/good\", exist_ok=True)\n",
-    "#         os.makedirs(f\"{self.outputPath}/train/bad\", exist_ok=True)\n",
-    "#         os.makedirs(f\"{self.outputPath}/eval/good\", exist_ok=True)\n",
-    "#         os.makedirs(f\"{self.outputPath}/eval/bad\", exist_ok=True)\n",
-    "#         # meta\n",
-    "        \n",
-    "#     def g(self):\n",
-    "#         pass"
+    "class Preprocess:\n",
+    "    def __init__(self, outputFolder, mode, imgPathL1, imgPathL2, activeJsonPath=None):\n",
+    "        \"\"\"\n",
+    "        mode     imgPathL1                   imgPathL2 (always good)  \n",
+    "        + train: bad for validation (ood)  & good for train \n",
+    "        + eval : c0  for unlabeled testing & c1   same as above\n",
+    "        activeJsonPath\n",
+    "        + 00: PD_B_GT_B, \n",
+    "        + 01: PD_B_GT_G, add to trainset (FP) hard\n",
+    "        + 10: PD_G_GT_B, add to badList  (FN)\n",
+    "        + 11: PD_G_GT_G, add to trainset (TN) easy\n",
+    "        \"\"\"\n",
+    "        global blackS\n",
+    "        if activeJsonPath:\n",
+    "            pathM  = json.load( open(activeJsonPath,\"r\") )\n",
+    "            blackS = blackS.union( { os.path.basename(path) for path in pathM[1][0] } ) # FN\n",
+    "            imgPathL2 += [ f\"{os.path.dirname(imgPathL2[0])}/{os.path.basename(path)}\" for path in pathM[0][1]+pathM[1][1] ] # FP, TN\n",
+    "        imgPathL2 = [ imgPath for imgPath in imgPathL2 if os.path.basename(imgPath) not in blackS ]\n",
+    "        for className,imgPathL in zip(['bad','good'] if mode=='train' else ['c0','c1'], [imgPathL1,imgPathL2]):\n",
+    "            folder = f\"{outputFolder}/{mode}/{className}\"\n",
+    "            os.makedirs(folder, exist_ok=True)\n",
+    "            for imgPath in imgPathL:\n",
+    "                shutil.copy(imgPath, folder)\n",
+    "            print( f\"len(os.listdir({folder})) = {len(os.listdir(folder))}\" )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "divided-headset",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#obj = Preprocess(imgPath=\"/home/jovyan/...\", antPath=\"/home/jovyan/...\", outputPath=\"/home/jovyan/data-vol-1/Transformaly/_data/example/cifar10/cifar-10-batches-py\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "proper-astronomy",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "brave-explanation",
+   "id": "convenient-wound",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17763\n",
-      "7\n"
+      "len(os.listdir(../_data/mam_v1/train/bad)) = 7\n",
+      "len(os.listdir(../_data/mam_v1/train/good)) = 99\n",
+      "len(os.listdir(../_data/mam_v1/eval/c0)) = 17765\n",
+      "len(os.listdir(../_data/mam_v1/eval/c1)) = 99\n"
      ]
     }
    ],
    "source": [
-    "! ls /home/jovyan/nas-dataset/JUPR/MAM20044/Good | grep png | wc -l\n",
-    "! ls /home/jovyan/nas-dataset/JUPR/MAM20044/Bad | grep png | wc -l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "valued-bradford",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n",
-      "7\n",
-      "20\n",
-      "7\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os, glob, random, shutil\n",
-    "import cv2\n",
+    "bImgPathL = sorted(glob.glob(\"/home/jovyan/nas-dataset/JUPR/MAM20044/Bad/*.png\"))\n",
+    "gImgPathL = sorted(glob.glob(\"/home/jovyan/nas-dataset/JUPR/MAM20044/Good/*.png\"))\n",
+    "random.Random(7).shuffle( gImgPathL )\n",
     "\n",
-    "bdImgL = sorted( glob.glob(\"/home/jovyan/nas-dataset/JUPR/MAM20044/Bad/*.png\") )\n",
-    "gdImgL = sorted( glob.glob(\"/home/jovyan/nas-dataset/JUPR/MAM20044/Good/*.png\") )\n",
-    "\n",
-    "random.Random(7).shuffle(bdImgL)\n",
-    "random.Random(7).shuffle(gdImgL)\n",
-    "\n",
-    "os.makedirs(\"../_data/mam/train/bad\", exist_ok=True)\n",
-    "os.makedirs(\"../_data/mam/train/good\", exist_ok=True)\n",
-    "os.makedirs(\"../_data/mam/eval/bad\", exist_ok=True)\n",
-    "os.makedirs(\"../_data/mam/eval/good\", exist_ok=True)\n",
-    "\n",
-    "for imgPath in bdImgL[:]:\n",
-    "    flpImg = cv2.imread(imgPath)[:,::-1,:]\n",
-    "    if random.random()>0.5:\n",
-    "        shutil.copy(imgPath, \"../_data/mam/train/bad\")\n",
-    "        cv2.imwrite(f\"../_data/mam/eval/bad/{os.path.basename(imgPath)}\", flpImg)\n",
-    "    else:\n",
-    "        shutil.copy(imgPath, \"../_data/mam/eval/bad\")\n",
-    "        cv2.imwrite(f\"../_data/mam/train/bad/{os.path.basename(imgPath)}\", flpImg)\n",
-    "for imgPath in gdImgL[:100]:\n",
-    "    shutil.copy(imgPath, \"../_data/mam/train/good\")\n",
-    "for imgPath in gdImgL[100:120]:\n",
-    "    shutil.copy(imgPath, \"../_data/mam/eval/good\")\n",
-    "\n",
-    "print( len(glob.glob(\"../_data/mam/train/bad/*.png\")) ) # 7\n",
-    "print( len(glob.glob(\"../_data/mam/train/good/*.png\")) ) # 100\n",
-    "print( len(glob.glob(\"../_data/mam/eval/bad/*.png\")) ) # 7\n",
-    "print( len(glob.glob(\"../_data/mam/eval/good/*.png\")) ) # 20"
+    "obj = Preprocess( outputFolder=\"../_data/mam_v1\", mode=\"train\", imgPathL1=bImgPathL,           imgPathL2=gImgPathL[:100], activeJsonPath=None)\n",
+    "obj = Preprocess( outputFolder=\"../_data/mam_v1\", mode=\"eval\" , imgPathL1=bImgPathL+gImgPathL, imgPathL2=gImgPathL[:100], activeJsonPath=None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "white-nowhere",
+   "id": "selected-collective",
    "metadata": {},
    "outputs": [],
    "source": []
